    Concerned frames are silenced, but reservoir for following frames is kept.
    Thanks to Patrick Dehne for the investigation and patch!
  - New option for fuzzy seeking; trading sample accuracy for speed.
    With that option, seeks positions are guessed using mean framesize or the Xing VBR TOC is used.
- new project files to build/use libmpg123 with MSVC++ 2005 and 2008, provided by Patrick Dehne
- fixed a regression that made the pause/loop mode in terminal control slowly go backwards

1.5.1
---

- fix wav/au/cdr writing to stdout (bug #2044423)
- add more sensible --no-resync to replace --resync (bug #2044404)
- libmpg123 7.0.7
  - fix thread safety of SSE decoder (bug #2053181)
  - fix robustness of length handling, added mpg123_set_filesize() (bug #2064322) 

1.5.0
---

- libmpg123 6.0.6
  - Floating point decoding back again, (build time choice for now; --with-cpu=generic_float).
  - More robust string handling; extended string API.
  - fixed an (so far) unnoticed ID3 bug that may have obscured comment fields
  - added mpg123_feed() as shortcut; using const input buffer now
  - resync is enabled again for ICY streams (the trouble in the past was due to a reader bug, not the streams)
  - decode ICY text data to UTF-8 (thanks, Thorsten)
  - preserve file flags for timeout mode
- More elaborate (helpful?) error message for output format problems.
- Reworked HTTP code... and added IPv6 support!
- Fix the --proxy parameter (has been accidentally ignored before).
- Added --ignore-mime to work with web streams with funny playlist MIME types like "audio/megurl".
- Know MIME audio/mpegurl.
- --timeout is now also used for the connection itself (not just reading).
- Now trying to resume ALSA device after suspend.
- subtle build changes (your CFLAGS rule now)

1.4.3
---

- Fix mpg123_tell() and mpg123_seek() return values with respect to the samples in decoding buffer (bug 1947373).
- Fix (bogus) 3DNow detection on IDT C6 (bug 1947982).